compiler/src/test/resources/golden/errors/type_concat_mismatch.dawn
fn f() -> List[Int] = [1] ++ ["a"]
