compiler/src/test/resources/golden/errors/type_concat_mismatch.err
error: `++` needs lists of the same element type: List[Int] vs List[String]
  --> type_concat_mismatch.dawn:1:27
  |
1 | fn f() -> List[Int] = [1] ++ ["a"]
  |                           ^^
